Fix spacing Change width size .btn::befor

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ body{
 
 .btn::before{
   content: "";
-  width: 20px;
+  width: 22px;
   height: 20px;
   position: absolute;
   background: #259990;
@@ -65,7 +65,6 @@ body{
 .btn-clear-disabled{
   display: none;
 }
-
 
 .img-champion{
   width: 450px;
